ui fix for dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@media screen and (prefers-color-scheme: dark) {
-  body {
-    color-scheme: dark;
-  }
+.dark {
+  color-scheme: dark;
 }
